test(server): expand unit test coverage for server layer